# nih-cxr-ai

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.py
configs/: foundation_model.yaml  test_traditional_config.yaml  traditional_model.yaml
notebooks/: 01_data_exploration.ipynb  02_model_comparison.ipynb  02_subgroup_analysis.ipynb
src/nih_cxr_ai/: __init__.py  config.py  inference.py  train.py
src/nih_cxr_ai/data/: __init__.py  data_validation.py  nih_dataset.py  prepare_dataset.py
src/nih_cxr_ai/models/: __init__.py  foundation.py  traditional.py
src/nih_cxr_ai/utils/: __init__.py  augmentations.py  image_analysis.py  transforms.py
src/nih_cxr_ai/utils/visualization/: __init__.py  dataset_viz.py  image_viz.py  performance_viz.py
tests/: test_imports.py
